add dockerfile setup

--- a/notebooks/config.yml
+++ b/notebooks/config.yml
@@ -1,14 +1,15 @@
 experiment: forward-simulation
 outer_steps: 2
-inner_steps: 1000
-L1: 100.0
-L2: 100.0
+inner_steps: 2
+L1: 10.0
+L2: 10.0
 ux: -1.0
-N1: 16384
-N2: 16384
+N1: 128
+N2: 128
 opt_type: optax
 maxiter: 100
 learning_rate: 0.1
 dt: 1.0e-05
 viscosity: 0.1
 M: 4
+radius: 1.0
