README, final touces

--- a/docker/environment.yml
+++ b/docker/environment.yml
@@ -7,6 +7,7 @@ dependencies:
   - jaxopt
   - jsonargparse
   - pip:
+      - -e /tmp/jax_ib
       - https://github.com/jax-md/jax-md/archive/main.zip
       - "jax[cuda12]==0.4.35"
 
